--- a/pom.xml
+++ b/pom.xml
@@ -17,5 +17,12 @@
   </dependencies>
   <build>
     <finalName>CICD-helloworld-webapp</finalName>
+    <plugins>
+      <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-war-plugin</artifactId>
+            <version>3.3.2</version> <!-- Use a compatible version -->
+        </plugin>
+    </plugins>
   </build>
 </project>
